--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
 </head>
 <body>
-    
+    <h1>I'm Octávio.</h1>
+    <p>a programmer.</p>
+
+    <h1>Hi there.</h1>
+    <p>I am a hardworking and dedicated individual with a focus on web development, particularly in HTML, CSS, and JavaScript. My next goal is mastering software development. Open to collaboration and eager to learn on this new path. I welcome the opportunity to connect with like-minded professionals and work together towards our growth.</p>
+
+    <h1>My Skills</h1>
+    <h2>Design</h2>
+    <p>I started learning to design when I was 15 years old because I liked creating art on game forums like Grand Theft Auto and Minecraft. This hobby led me to gain experience and work as a freelance graphic designer, starting my journey in the design industry.</p>
+
+    <h2>Development</h2>
+    <p>In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
 </body>
 </html>
