--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I'm Octávio.</h1>
-    <p>a programmer.</p>
+    <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+        <div class="title-main">
+            <h1>I'm Octávio.</h1>
+            <p>a programmer.</p>
+        </div>
+        <img class="cloud-bottom" src="images/cloud.png" alt="cloud">
+        <img class="mountain" src="images/mountain.png" alt="mountain">
+
+    </div>
 
     <h1>Hi there.</h1>
     <p>I am a hardworking and dedicated individual with a focus on web development, particularly in HTML, CSS, and JavaScript. My next goal is mastering software development. Open to collaboration and eager to learn on this new path. I welcome the opportunity to connect with like-minded professionals and work together towards our growth.</p>
