--- a/index.html
+++ b/index.html
@@ -29,3 +29,21 @@
     <p>In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
 </body>
 </html>
+
+1 Projeto de uma página da web simples com curiosidades sobre a origem da logo do Android.
+
+<a href="">screm1n.github.io/android-project/</a>
+
+2 <a href="">screm1n.github.io/android-project/</a>
+
+1 Design de um site com a letra de uma música e com imagens em efeito parallax.
+
+2 screm1n.github.io/stronger-project/
+
+1 Projeto realizado no curso de HTML e CSS, que se trata da tela de um celular interativa com algumas redes sociais.
+
+2 <a href="">screm1n.github.io/socialmedia-project/</a>
+
+1 Último projeto que realizei nesse curso, que se trata de uma tela de login responsitva, adaptável em todos tipos e tamanhos de tela.
+
+<a href="">2 screm1n.github.io/login-project/</a>
