--- a/index.html
+++ b/index.html
@@ -8,29 +8,42 @@
 </head>
 <body>
     <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud">
         <div class="title-main">
             <h1>I'm Octávio.</h1>
-            <p>a programmer.</p>
+            <p id="subtitle">a programmer.</p>
         </div>
-        <img class="cloud-bottom" src="images/cloud.png" alt="cloud">
         <img class="mountain" src="images/mountain.png" alt="mountain">
-
     </div>
 
-    <h1>Hi there.</h1>
-    <p>I am a hardworking and dedicated individual with a focus on web development, particularly in HTML, CSS, and JavaScript. My next goal is mastering software development. Open to collaboration and eager to learn on this new path. I welcome the opportunity to connect with like-minded professionals and work together towards our growth.</p>
-
-    <h1>My Skills</h1>
-    <h2>Design</h2>
-    <p>I started learning to design when I was 15 years old because I liked creating art on game forums like Grand Theft Auto and Minecraft. This hobby led me to gain experience and work as a freelance graphic designer, starting my journey in the design industry.</p>
-
-    <h2>Development</h2>
-    <p>In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
+    <div class="mid-container">
+        <img class="avatar" src="images/avatar.png">
+        <h1>Hi there.</h1>
+        <p class="intro">I'm a hardworking and dedicated individual with a focus on web development, particularly in HTML, CSS, and JavaScript. My next goal is mastering software development.</p>
+    </div><br>
+    <img class='separadora' src="images/separadora.png">
+    <div class="bottom-container">
+        <h1>My Skills</h1>
+        <div class="skills">
+            <div class="laptop1">
+                <img class="laptop" height="150px" src="images/design.png" alt="laptop design">
+            </div>
+            <div class="exp1">
+                <h2 class="pro">Design</h2>
+                <p class="xp">I started learning to design when I was 15 years old because I liked creating art on game forums like Grand Theft Auto and Minecraft. This hobby led me to gain experience and work as a freelance graphic designer, starting my journey in the design industry.</p>
+            </div>
+            <div class="laptop2">
+                <img class="laptop" height="150px" src="images/dev.png" alt="laptop design">
+            </div>
+            <div class="exp2">
+                <h2 class="pro">Development</h2>
+                <p class="xp">In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
-1 Projeto de uma página da web simples com curiosidades sobre a origem da logo do Android.
+<!-- 1 Projeto de uma página da web simples com curiosidades sobre a origem da logo do Android.
 
 <a href="">screm1n.github.io/android-project/</a>
 
@@ -46,4 +59,4 @@
 
 1 Último projeto que realizei nesse curso, que se trata de uma tela de login responsitva, adaptável em todos tipos e tamanhos de tela.
 
-<a href="">2 screm1n.github.io/login-project/</a>
+<a href="">2 screm1n.github.io/login-project/</a> -->
