--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
                 <p class="xp">In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
             </div>
         </div>
+        <img class='separadora' src="images/separadora.png">
+    <div class="contact-container">
+        <h1>Contact</h1>
+        <p class="contact">I'm open to contributing to software development projects and eager to learn. I welcome opportunities to collaborate and expand my knowledge in the ever-evolving world of software development.</p>
+        <a class="btn" href="mailto:screminoctavio@gmail.com">CONTACT ME</a>
     </div>
+    <div class="footer">
+        <a href="https://www.linkedin.com/in/screminoctavio/">Linkedin</a>
+    </div>
+</div>
 </body>
 </html>
 
