--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="top-container">
         <div class="title-main">
-            <h1>I'm Octávio.</h1>
+            <h1 class="main-h1">I'm Octávio.</h1>
             <p id="subtitle">a programmer.</p>
         </div>
         <img class="mountain" src="images/mountain.png" alt="mountain">
@@ -20,7 +20,7 @@
         <h1>Hi there.</h1>
         <p class="intro">I'm a hardworking and dedicated individual with a focus on web development, particularly in HTML, CSS, and JavaScript. My next goal is mastering software development.</p>
     </div><br>
-    <img class='separadora' src="images/separadora.png">
+    <hr>
     <div class="bottom-container">
         <h1>My Skills</h1>
         <div class="skills">
@@ -39,33 +39,16 @@
                 <p class="xp">In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
             </div>
         </div>
-        <img class='separadora' src="images/separadora.png">
+        <hr>
     <div class="contact-container">
         <h1>Contact</h1>
         <p class="contact">I'm open to contributing to software development projects and eager to learn. I welcome opportunities to collaborate and expand my knowledge in the ever-evolving world of software development.</p>
         <a class="btn" href="mailto:screminoctavio@gmail.com">CONTACT ME</a>
     </div>
     <div class="footer">
-        <a href="https://www.linkedin.com/in/screminoctavio/">Linkedin</a>
+        <a href="https://www.linkedin.com/in/screminoctavio/">LinkedIn</a>
+        <a href="https://github.com/screm1n">GitHub</a>
     </div>
 </div>
 </body>
 </html>
-
-<!-- 1 Projeto de uma página da web simples com curiosidades sobre a origem da logo do Android.
-
-<a href="">screm1n.github.io/android-project/</a>
-
-2 <a href="">screm1n.github.io/android-project/</a>
-
-1 Design de um site com a letra de uma música e com imagens em efeito parallax.
-
-2 screm1n.github.io/stronger-project/
-
-1 Projeto realizado no curso de HTML e CSS, que se trata da tela de um celular interativa com algumas redes sociais.
-
-2 <a href="">screm1n.github.io/socialmedia-project/</a>
-
-1 Último projeto que realizei nesse curso, que se trata de uma tela de login responsitva, adaptável em todos tipos e tamanhos de tela.
-
-<a href="">2 screm1n.github.io/login-project/</a> -->
