html and css done

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             </div>
             <div class="exp1">
                 <h2 class="pro">Design</h2>
-                <p class="xp">I started learning to design when I was 15 years old because I liked creating art on game forums like Grand Theft Auto and Minecraft. This hobby led me to gain experience and work as a freelance graphic designer, starting my journey in the design industry.</p>
+                <p class="xp">I started learning to design when I was 15 years old because I liked creating art in <i>Adobe Photoshop</i> on game forums like Grand Theft Auto and Minecraft. This hobby led me to gain experience and work as a freelance graphic designer, starting my journey in the design industry.</p>
             </div>
             <div class="laptop2">
                 <img class="laptop" height="150px" src="images/dev.png" alt="laptop design">
             </div>
             <div class="exp2">
                 <h2 class="pro">Development</h2>
-                <p class="xp">In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering HTML, CSS, and JavaScript to create exceptional web experiences.</p>
+                <p class="xp">In 2023, I started studying web development due to a strong interest in the field and its potential. I'm dedicated to mastering <i>HTML</i>, <i>CSS</i>, and <i>JavaScript</i> to create great web experiences.</p>
             </div>
         </div>
         <hr>
@@ -46,8 +46,9 @@
         <a class="btn" href="mailto:screminoctavio@gmail.com">CONTACT ME</a>
     </div>
     <div class="footer">
-        <a href="https://www.linkedin.com/in/screminoctavio/">LinkedIn</a>
-        <a href="https://github.com/screm1n">GitHub</a>
+        <a href="https://github.com/screm1n" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/screminoctavio/" target="_blank">LinkedIn</a>
+        <p style="font-size: .8em;">© scremin.</p>
     </div>
 </div>
 </body>
